<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/bkg"
        >



        <CheckBox
            android:layout_marginLeft="20sp"
            android:layout_marginTop="5sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arabic"
            android:textSize="30sp"
            android:layout_gravity="left"
            android:id="@+id/arabic"
            android:textColor="@color/pirbel"
            android:textStyle="bold"
            />
        <CheckBox
            android:layout_gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/english"
            android:textSize="30sp"
            android:layout_marginTop="5sp"
            android:layout_marginRight="20sp"
            android:id="@+id/english"

            android:textColor="@color/pirbel"
            android:textStyle="bold"
            />
        <CheckBox
            android:layout_marginLeft="20sp"
            android:layout_marginTop="5sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spanish"
            android:layout_gravity="left"
            android:textSize="30sp"

            android:id="@+id/spanish"

            android:textColor="@color/pirbel"
            android:textStyle="bold"
            />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/french"
            android:textSize="30sp"
            android:layout_marginTop="5sp"
            android:layout_marginRight="20sp"
            android:id="@+id/french"
            android:textColor="@color/pirbel"
            android:textStyle="bold"
            android:layout_gravity="right"
            />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/german"
            android:textSize="30sp"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="5sp"
            android:id="@+id/german"
            android:textColor="@color/pirbel"
            android:textStyle="bold"

            />

        <CheckBox
            android:id="@+id/italian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="5sp"
            android:layout_marginRight="20sp"
            android:text="@string/austrian"
            android:textColor="@color/pirbel"
            android:textSize="30sp"
            android:textStyle="bold" />





        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/russian"
            android:textSize="30sp"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="5sp"
            android:id="@+id/russian"
            android:textColor="@color/pirbel"
            android:textStyle="bold"
            />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/porto"
            android:textSize="30sp"
            android:layout_marginTop="5sp"
            android:layout_marginRight="20sp"
            android:id="@+id/porto"

            android:textColor="@color/pirbel"
            android:textStyle="bold"
            android:layout_gravity="right"
            />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/turky"
            android:textSize="30sp"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="5sp"
            android:id="@+id/turky"

            android:textColor="@color/pirbel"
            android:textStyle="bold"
            />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dutch"
            android:textSize="30sp"
            android:layout_marginTop="5sp"
            android:layout_marginRight="20sp"
            android:id="@+id/dutch"
            android:layout_gravity="right"

            android:textColor="@color/pirbel"
            android:textStyle="bold"

            />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/swedish"
            android:textSize="30sp"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="5sp"
            android:id="@+id/swedish"
            android:textColor="@color/pirbel"
            android:textStyle="bold"
            />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/polish"
            android:textSize="30sp"
            android:layout_marginTop="5sp"
            android:layout_marginRight="20sp"

            android:id="@+id/polish"
            android:textColor="@color/pirbel"
            android:textStyle="bold"
            android:layout_gravity="right"
            />





        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_shabe"
            android:layout_marginTop="10sp"
            android:layout_marginLeft="15sp"
            android:layout_marginRight="15sp"
            android:layout_gravity="center"
            android:id="@+id/submit_lang"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:text="@string/next"
            android:layout_marginBottom="5sp"
            android:padding="15sp"
            android:gravity="left"
            android:textAlignment="center"/>

    </LinearLayout>


</ScrollView>
