<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bkg"
    android:gravity="center"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alex"
                android:textSize="30sp"
                android:layout_margin="5sp"
                android:id="@+id/alex"
                android:textColor="@color/black"
                android:textStyle="bold"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aswan"
                android:textSize="30sp"
                android:layout_margin="5sp"
                android:id="@+id/aswan"
                android:textColor="@color/black"
                android:textStyle="bold"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/asyut"
                android:textSize="30sp"
                android:layout_margin="5sp"
                android:id="@+id/asyut"
                android:textColor="@color/black"
                android:textStyle="bold"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/beheira"
                android:textSize="30sp"
                android:layout_margin="5sp"
                android:id="@+id/beheira"
                android:textColor="@color/black"
                android:textStyle="bold"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/beni_Suef"
                android:textSize="30sp"
                android:layout_margin="5sp"
                android:id="@+id/beni_Suef"
                android:textColor="@color/black"
                android:textStyle="bold"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cairo"
                android:textSize="30sp"
                android:layout_margin="5sp"
                android:id="@+id/cairo"
                android:textColor="@color/black"
                android:textStyle="bold"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dakahlia"
                android:textSize="30sp"
                android:layout_margin="5sp"
                android:id="@+id/dakahlia"
                android:textColor="@color/black"
                android:textStyle="bold"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/damietta"
                android:textSize="30sp"
                android:layout_margin="5sp"
                android:id="@+id/damietta"
                android:textColor="@color/black"
                android:textStyle="bold"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/faiyum"
                android:textSize="30sp"
                android:layout_margin="5sp"
                android:id="@+id/faiyum"
                android:textColor="@color/black"
                android:textStyle="bold"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gharbia"
                android:textSize="30sp"
                android:layout_margin="5sp"
                android:id="@+id/gharbia"
                android:textColor="@color/black"
                android:textStyle="bold"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/giza"
                android:textSize="30sp"
                android:layout_margin="5sp"
                android:id="@+id/giza"
                android:textColor="@color/black"
                android:textStyle="bold"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ismailia"
                android:textSize="30sp"
                android:layout_margin="5sp"
                android:id="@+id/ismailia"
                android:textColor="@color/black"
                android:textStyle="bold"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kfr"
                android:textSize="30sp"
                android:layout_margin="5sp"
                android:id="@+id/kfr"
                android:textColor="@color/black"
                android:textStyle="bold"
                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/luxor"
                android:textSize="30sp"
                android:layout_margin="5sp"
                android:id="@+id/luxor"
                android:textColor="@color/black"
                android:textStyle="bold"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/matruh"
                android:textSize="30sp"
                android:layout_margin="5sp"
                android:id="@+id/matruh"
                android:textColor="@color/black"
                android:textStyle="bold"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minya"
                android:textSize="30sp"
                android:layout_margin="5sp"
                android:id="@+id/minya"
                android:textColor="@color/black"
                android:textStyle="bold"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monufia"
                android:textSize="30sp"
                android:layout_margin="5sp"
                android:id="@+id/monufia"
                android:textColor="@color/black"
                android:textStyle="bold"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/newValley"
                android:textSize="30sp"
                android:layout_margin="5sp"
                android:id="@+id/newValley"
                android:textColor="@color/black"
                android:textStyle="bold"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/northSinai"
                android:textSize="30sp"
                android:layout_margin="5sp"
                android:id="@+id/northSinai"
                android:textColor="@color/black"
                android:textStyle="bold"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/portSaid"
                android:textSize="30sp"
                android:layout_margin="5sp"
                android:id="@+id/portSaid"
                android:textColor="@color/black"
                android:textStyle="bold"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qalyubia"
                android:textSize="30sp"
                android:layout_margin="5sp"
                android:id="@+id/qalyubia"
                android:textColor="@color/black"
                android:textStyle="bold"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qena"
                android:textSize="30sp"
                android:layout_margin="5sp"
                android:id="@+id/qena"
                android:textColor="@color/black"
                android:textStyle="bold"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/redSea"
                android:textSize="30sp"
                android:layout_margin="5sp"
                android:id="@+id/redSea"
                android:textColor="@color/black"
                android:textStyle="bold"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sharqia"
                android:textSize="30sp"
                android:layout_margin="5sp"
                android:id="@+id/sharqia"
                android:textColor="@color/black"
                android:textStyle="bold"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sohag"
                android:textSize="30sp"
                android:layout_margin="5sp"
                android:id="@+id/sohag"
                android:textColor="@color/black"
                android:textStyle="bold"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/southSinai"
                android:textSize="30sp"
                android:layout_margin="5sp"
                android:id="@+id/southSinai"
                android:textColor="@color/black"
                android:textStyle="bold"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/suez"
                android:textSize="30sp"
                android:layout_margin="5sp"
                android:id="@+id/suez"
                android:textColor="@color/black"
                android:textStyle="bold"
                />

        </LinearLayout>
        </ScrollView>
     <!-- <LinearLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            >
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/luxor"
                android:textSize="30sp"
                android:layout_margin="5sp"
                android:id="@+id/luxor"
                android:textColor="@color/black"
                android:textStyle="bold"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/matruh"
                android:textSize="30sp"
                android:layout_margin="5sp"
                android:id="@+id/matruh"
                android:textColor="@color/black"
                android:textStyle="bold"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minya"
                android:textSize="30sp"
                android:layout_margin="5sp"
                android:id="@+id/minya"
                android:textColor="@color/black"
                android:textStyle="bold"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monufia"
                android:textSize="30sp"
                android:layout_margin="5sp"
                android:id="@+id/monufia"
                android:textColor="@color/black"
                android:textStyle="bold"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/newValley"
                android:textSize="30sp"
                android:layout_margin="5sp"
                android:id="@+id/newValley"
                android:textColor="@color/black"
                android:textStyle="bold"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/northSinai"
                android:textSize="30sp"
                android:layout_margin="5sp"
                android:id="@+id/northSinai"
                android:textColor="@color/black"
                android:textStyle="bold"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/portSaid"
                android:textSize="30sp"
                android:layout_margin="5sp"
                android:id="@+id/portSaid"
                android:textColor="@color/black"
                android:textStyle="bold"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qalyubia"
                android:textSize="30sp"
                android:layout_margin="5sp"
                android:id="@+id/qalyubia"
                android:textColor="@color/black"
                android:textStyle="bold"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qena"
                android:textSize="30sp"
                android:layout_margin="5sp"
                android:id="@+id/qena"
                android:textColor="@color/black"
                android:textStyle="bold"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/redSea"
                android:textSize="30sp"
                android:layout_margin="5sp"
                android:id="@+id/redSea"
                android:textColor="@color/black"
                android:textStyle="bold"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sharqia"
                android:textSize="30sp"
                android:layout_margin="5sp"
                android:id="@+id/sharqia"
                android:textColor="@color/black"
                android:textStyle="bold"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sohag"
                android:textSize="30sp"
                android:layout_margin="5sp"
                android:id="@+id/sohag"
                android:textColor="@color/black"
                android:textStyle="bold"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/southSinai"
                android:textSize="30sp"
                android:layout_margin="5sp"
                android:id="@+id/southSinai"
                android:textColor="@color/black"
                android:textStyle="bold"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/suez"
                android:textSize="30sp"
                android:layout_margin="5sp"
                android:id="@+id/suez"
                android:textColor="@color/black"
                android:textStyle="bold"
                />
        </LinearLayout>-->

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_shabe"
            android:layout_marginTop="5sp"
            android:layout_marginLeft="15sp"
            android:layout_marginRight="15sp"
            android:layout_gravity="center"
            android:id="@+id/submit_location"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:text="@string/submit"
            android:layout_marginBottom="5sp"
            android:padding="15sp"
            android:gravity="center"
            android:textAlignment="center"/>

    </LinearLayout>




</LinearLayout>