<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bkg"
    >

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:fontFamily="monospace"
        android:textColor="@color/pirbeldark"
        android:padding="20sp"
        android:textStyle="bold"
        android:textSize="60sp"
        android:textAlignment="center"
        android:text="@string/tourist"/>


    <LinearLayout
        android:layout_weight="2"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/t_email"
            android:textColorHint="@color/pirbel"
            android:textColor="@color/pirbel"
            android:layout_margin="10sp"
            android:id="@+id/log_email"
            android:inputType="textEmailAddress"
            style="@style/TextAppearance.AppCompat.Display1"
            android:background="@drawable/edit_text_shape"
            android:padding="15sp"
            android:textStyle="bold"
            />

        <EditText
            android:padding="15sp"
            android:inputType="textPassword"
            style="@style/TextAppearance.AppCompat.Display1"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/t_pass"
            android:textColorHint="@color/pirbel"
            android:textColor="@color/pirbel"
            android:layout_margin="10sp"
            android:id="@+id/log_pass"
            android:background="@drawable/edit_text_shape"/>
        <TextView
            android:padding="15sp"
            android:inputType="text"
            style="@style/TextAppearance.AppCompat.Display1"
            android:text="@string/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_margin="10sp"
            android:textSize="25sp"
            android:id="@+id/log_sign_up"
            android:textAlignment="center"
            android:background="@drawable/test_shape_1"
android:clickable="true"
            />
        <TextView
            android:id="@+id/forget_pass_tourist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/forget"
            android:textSize="20sp"
            android:textColor="@color/blue"
            android:clickable="true"
            />

    </LinearLayout>
    <Button
        android:background="@drawable/button_shabe"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textColor="@color/white"
        android:padding="20sp"
        android:textStyle="italic"
        android:textSize="25sp"
        android:text="@string/log_in"
        android:layout_margin="15sp"
        android:id="@+id/log_submit"
        android:layout_gravity="end"

        />


</LinearLayout>